# udacity_cpp_capstone

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
src/: controller.cpp  controller.h  game.cpp  game.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  snake.cpp  snake.h  terrain.cpp  terrain.h
src/img/: food.xcf  grass.xcf  player.xcf
